# ruby-analyzer

./: .gitignore  Cargo.toml  TODO.md
basic_parser/src/: lib.rs  scope_gate.rs  transformer.rs
crates/lsp_server/: Cargo.toml
crates/lsp_server/src/: backend.rs  ext_traits.rs  language.rs  lib.rs  main.rs  ropey_ext.rs  session.rs
crates/lsp_server/src/backend/: language_server.rs
crates/lsp_server/src/session/: document.rs  document_open_state_index.rs  document_text_index.rs  parse_tree_index.rs
crates/parser/: Cargo.toml
crates/parser/src/: parse_result.rs  parser.rs
crates/prism-parser/: Cargo.toml
crates/tree-sitter-parser/src/: lib.rs  queries.rs
indextree_parser/: Cargo.toml
indextree_parser/src/: compat.rs  lib.rs  nodes.rs  tree_sitter.rs
indextree_parser/tests/: parse_and_walk_tests.rs
parsers/basic/: Cargo.toml
parsers/basic/src/: lib.rs  nodes.rs  properties.rs  queries.rs  transformer.rs
parsers/indextree/src/: parser.rs  scope_gate.rs  transformer.rs
parsers/indextree/tests/: parse_and_walk_tests.rs
parsers/tbc/: Cargo.toml
parsers/tbc/src/: lib.rs  scope_gate.rs  transformer.rs
parsers/tbc/tests/: parse_and_lookup_tests.rs
parsers/tree-sitter/src/: diagnostic.rs  lib.rs  parser.rs
parsers/tree-sitter/src/parse_result/: icky_nodes.rs
poc-parsers/basic/: Cargo.toml
poc-parsers/indextree/: Cargo.toml
poc-parsers/indextree/src/: db.rs  lib.rs  queries.rs
poc-parsers/tbc/: Cargo.toml
poc-parsers/tbc/src/: queries.rs  transformer.rs
poc-parsers/tbc/src/scoped_index/: node_properties.rs
src/: db.rs  file_ast.rs  lib.rs  lrp_extensions.rs  namespace.rs  node.rs  nodes.rs  parser.rs  properties.rs  queries.rs  scope_gate.rs  transformer.rs
tbc_parser/: Cargo.toml
tbc_parser/src/: lib.rs  location.rs  parser.rs  scoped_index.rs  transformer.rs
tbc_parser/src/location/: node.rs
tbc_parser/src/scoped_index/: nodes.rs
tbc_parser/tests/: parse_and_lookup_tests.rs
tree-sitter_parser/: Cargo.toml
