[package]
name = "ruby_analyzer-lsp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-lock = "2.7"
dashmap = "5.4.0"
ropey.workspace = true
ruby_analyzer-tree_sitter_parser = { path = "../parser" }
tokio = { version = "1.17", features = ["full", "tracing", "parking_lot"] }
tower-lsp = "0.19"
tracing.workspace = true
tree-sitter.workspace = true
