[package]
name = "ruby_analyzer-indextree_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = { version = "4.6.0", features = ["par_iter"] }
lib-ruby-parser = "4.0.4"
lsp-types = "0.94.0"
ropey = "1.6.0"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa" }
tracing = { version = "0.1.37", features = ["log"] }
tree-sitter = "0.20.10"
tree-sitter-ruby = "0.20.0"

[dev-dependencies]
tracing-test = "0.2.4"
